tests/rosetta/out/Haskell/bifid-cipher.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bifid-cipher.hs:160:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/bifid-cipher.hs:149:1
                 /workspace/mochi/tests/rosetta/out/Haskell/bifid-cipher.hs:160:1
    |
160 | main = do
    | ^^^^
